ros2_ws/log/build_2024-05-01_19-23-26/subscriber_pkg/stderr.log
  File "/home/mford/ros2_ws/install/subscriber_pkg/lib/python3.10/site-packages/subscriber_pkg/subscriber.py", line 26
    main()def main():
          ^^^
SyntaxError: invalid syntax

